fix(input): added representation of created post from the main page; ability to hide and show form; added text-overflow ellipsis

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -66,6 +66,9 @@ h1
     text-transform: capitalize
     color: darken($text-color, 5%)
     font-size: 16px
+    text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
   >.image-container
     display: flex
     justify-content: center
@@ -106,13 +109,35 @@ h1
     text-transform: capitalize
     font-size: 19px
 
+.primaty-btn
+  text-transform: uppercase
+  outline: 0
+  background: $interaction-color
+  width: 100%
+  border: 0
+  padding: 15px
+  color: $secondary-color
+  font-size: 14px
+  -webkit-transition: all 0.3 ease
+  transition: all 0.3 ease
+  cursor: pointer
+  border-radius: 25px
+
 .form-blank
   width: 20em
   padding: 4% 0 0
+  height: 0
+  opacity: 0
+  overflow: hidden
   margin: auto
   color: $text-color
   text-align: center
   border-bottom: 1px solid $secondary-color
+  transition: 1s ease-out
+
+.show
+  height: auto
+  opacity: 1
 
 .myForm
   position: relative
@@ -122,7 +147,7 @@ h1
   margin: 0 auto 100px
   >label
     text-transform: uppercase
-  >input
+  >input, textarea
     font-family: "Roboto", sans-serif
     outline: 0
     background: $primary-color
@@ -135,18 +160,6 @@ h1
     border: 1px solid $secondary-color
     color: $text-color
     border-radius: 10px
-
-  >button
-    font-family: "Roboto", sans-serif
-    text-transform: uppercase
-    outline: 0
-    background: $interaction-color
-    width: 100%
-    border: 0
-    padding: 15px
-    color: $text-color
-    font-size: 14px
-    -webkit-transition: all 0.3 ease
-    transition: all 0.3 ease
-    cursor: pointer
-    border-radius: 25px
+    resize: none
+  >textarea
+    height: 6em
